<resources>
    <string name="app_name">¿Dónde Curso?</string>
    <string name="button_buscar">Buscar</string>
    <string name="button_nueva_consulta">Nueva Consulta</string>
    <string name="carrera">Carrera</string>
    <string name="comisión">Comisión</string>
    <string name="fecha">Fecha</string>
    <string name="materia">Materia</string>
    <string name="nivel">Nivel</string>
    <string name="title_activity_reservas">Reservas</string>
    <string name="title_activity_favorito">Mis Materias</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="debe_seleccionar_una_carrera">Debe seleccionar una carrera</string>
    <string name="error_conexion">No se ha podido conectar con el servidor</string>
    <string name="reintentar">Reintentar</string>
    <string name="disclaimer">
        Lamentamos informarles que Donde Curso no funcionará debido a cambios recientes en la API
        de la facultad, estaremos trabajando para adaptarnos a los nuevos cambios.
        Por el momento utilizen la web de distribuciones de aula de la facultad
    </string>
    <string name="urlWeb">https://www.frsf.utn.edu.ar/recursos-web/distribucion-de-aulas</string>
</resources>
