<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="utnfrsf.dondecurso.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrera"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="5dp" />

    <Spinner
        android:id="@+id/spinner_carrera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="21dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="76dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="5dp" />

    <Spinner
        android:id="@+id/spinner_nivel"
        android:layout_width="0dp"
        android:layout_height="35dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/spinner_carrera"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_carrera"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_carrera" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materia"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_nivel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp" />

    <Spinner
        android:id="@+id/spinner_materia"
        android:layout_width="0dp"
        android:layout_height="35dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/spinner_nivel"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_nivel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_nivel" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comisión"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_materia"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp" />

    <Spinner
        android:id="@+id/spinner_comision"
        android:layout_width="0dp"
        android:layout_height="35dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/spinner_materia"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_materia"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_materia" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_comision"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:focusable="false"
        android:textAppearance="@android:style/TextAppearance.Medium"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/spinner_comision"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_comision"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_comision" />

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_buscar"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textViewFecha"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textViewFecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.927" />

</android.support.constraint.ConstraintLayout>
